--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= render partial: 'shared/navigation' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
