--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,7 +8,11 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
-        <a class="nav-link" href="facebook_login_path">Login With Facebook</a>
+        <% if current_user %>
+          <a class="nav-link" href="facebook_logout_path">Logout</a>
+        <% else %>
+          <a class="nav-link" href="<%= facebook_login_path %>">Login With Facebook</a>
+        <% end %>
       </li>
     </ul>
   </div>
