--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -10,6 +10,7 @@
       <li>
         <% if current_user %>
           <a class="nav-link" href="facebook_logout_path">Logout</a>
+          <%= link_to "My Profile", dashboard_path(current_user.username) %>
         <% else %>
           <a class="nav-link" href="<%= facebook_login_path %>">Login With Facebook</a>
         <% end %>
