--- a/app/views/user/folders/show.html.erb
+++ b/app/views/user/folders/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.username %></h1>
+<h1><%= current_user.username %></h1>
 
 
 <%= link_to "New Folder", new_user_folder_path(current_user.username) %>
