add public folder index page functionality
create folders controller with index action which creates an instance variable for all folders where permission is global
create index view to iterate through folders and link to their show page
navbar appearance is working for user
add index route for folders

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -2,19 +2,18 @@
   <a class="navbar-brand" href='<%= landing_page_path %>'>Grab Bag</a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="nav navbar-nav">
-      <li>
-        <a class="nav-link" href='folders_path'>Public Folders</a>
-      </li>
+        <li><%= link_to "Public Folders", folders_path, class: 'nav-link' %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li>
+
         <% if current_user %>
-          <a class="nav-link" href="facebook_logout_path">Logout</a>
-          <%= link_to "My Profile", dashboard_path(current_user.username) %>
+          <li><%= link_to "My Profile", dashboard_path(current_user.username), class: 'nav-link' %></li>
+
+          <li><a class="nav-link" href="facebook_logout_path">Logout</a></li>
         <% else %>
-          <a class="nav-link" href="<%= facebook_login_path %>">Login With Facebook</a>
+          <li><a class="nav-link" href="<%= facebook_login_path %>">Login With Facebook</a></li>
         <% end %>
-      </li>
+
     </ul>
   </div>
 </nav>
