--- a/app/views/users/folders/new.html.erb
+++ b/app/views/users/folders/new.html.erb
@@ -1,15 +1,18 @@
 
 
-THis is new
+<div class="form-group", style="width:50%;">
+  <%= form_for @folder, url: "/#{current_user.username}/folders" do |f| %>
+    <div class="form-group">
+    <%= f.label :name  %>
+    <%= f.text_field :name, class: "form-control"  %>
+    </div>
+    <div class="form-group">
+      <%= f.label :private %>
+    <%= f.radio_button :permission, "personal", checked: true%>
+    <%= f.label :public %>
+    <%= f.radio_button :permission, "global" %>
+  </div>
 
-
-<%= form_for @folder, url: "/#{current_user.username}/folders" do |f| %>
-  <%= f.label :name  %>
-  <%= f.text_field :name  %>
-  <%= f.label :private %>
-  <%= f.radio_button :permission, "personal", checked: true%>
-  <%= f.label :public %>
-  <%= f.radio_button :permission, "global" %>
-
-  <%= f.submit "Create" %>
-<% end %>
+    <%= f.submit "Create", class: "btn btn-default" %>
+  <% end %>
+</div>
