Display preview apology for unknown data type

--- a/app/views/users/binaries/show.html.erb
+++ b/app/views/users/binaries/show.html.erb
@@ -2,6 +2,7 @@
 <%= link_to 'Download' %>
 
 <div class="preview">
+<%= render_preview(@binary) %>
 </div>
 
 <%= render partial: 'shared/comments' %>
