Change content_type -> extension

--- a/app/views/users/folders/show.html.erb
+++ b/app/views/users/folders/show.html.erb
@@ -28,7 +28,7 @@
           <% @current_folder.binaries.each do |binary|%>
             <tr>
               <td> <%=binary.name%></td>
-              <td> <%=binary.content_type%></td>
+              <td> <%=binary.extension%></td>
               <td> <%=binary.updated_at%></td>
               <td></td>
               <td> <button type="button" class="btn btn-primary"> Download </button>  </td>
