--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,3 +16,13 @@
 
 @import "bootstrap-sprockets"
 @import "bootstrap"
+
+.progress
+  max-width: 600px
+  margin:    0.2em 0 0.2em 0
+
+.progress .bar
+  height:  1.2em
+  padding-left: 0.2em
+  color:   white
+  display: none
