--- a/app/views/users/folders/binaries/new.html.erb
+++ b/app/views/users/folders/binaries/new.html.erb
@@ -1,19 +1,28 @@
-<%= form_for(@binary, html: { class: 'directUpload',
-        data: { 'form-data' => (@s3_direct_post.fields),
-                'url' => @s3_direct_post.url,
-                'host' => URI.parse(@s3_direct_post.url).host } }) do |f| %>
-        <div class="field">
-          <%= f.label :data_url %><br>
-          <%= f.file_field :data_url %>
-        </div>
-        <div class="actions">
-          <%= f.submit %>
-        </div>
-        <% end %>
-
-
-
+<%= form_for(@binary, html: {
+                              class: 'directUpload',
+                              data: { 'form-data' => (@s3_direct_post.fields),
+                                      'url' => @s3_direct_post.url,
+                                      'host' => URI.parse(@s3_direct_post.url).host }
+                            }) do |f| %>
+<% if @binary.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+  <ul>
+    <% user.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+<div class="field">
+  <%= f.label :data_url %><br>
+  <%= f.file_field :data_url %>
+</div>
+<div class="actions">
+  <%= f.submit %>
+</div>
+<% end %>
 <!-- <#%= form_tag binaries_path, method: :post, :multipart => true do %>
-  <#%= file_field_tag 'upload_file' %>
-  <#%= submit_tag "Upload Binary" %>
+<#%= file_field_tag 'upload_file' %>
+<#%= submit_tag "Upload Binary" %>
 <#% end %> -->
