Authorize users for folder/binary show + personal pages
extract current_folder helper method
WIP route updates
Redirect login to user.home.url
Redirect SignUp#create to user.home.url
Update path helpers in create folders spec
Skip a test for uploading files
Route to binary or folder create from constraints
Update folder new form
Authorize users for folder show
Uncomment test
Test authorization to folder/binary show
Format pretty-like
Test auth for user dashboard
Auth users personal pages

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,7 +7,7 @@
     <ul class="nav navbar-nav navbar-right">
 
         <% if current_user %>
-          <li><%= link_to "My Profile", dashboard_path(current_user.username), class: 'nav-link' %></li>
+          <li><%= link_to "My Profile", users_dashboard_path(current_user.username), class: 'nav-link' %></li>
 
           <li><a class="nav-link" href="facebook_logout_path">Logout</a></li>
         <% else %>
