--- a/app/views/users/users/edit.html.erb
+++ b/app/views/users/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group", style="width:50%;">
-  <%= form_for current_user, url: dashboard_patch_path(current_user.username) do |f| %>
+  <%= form_for current_user, url: users_dashboard_patch_path(current_user.username) do |f| %>
     <div class="form-group">
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control"  %>
