--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -4,5 +4,5 @@
   <!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div> -->
 
   <%= link_to "Login with Facebook", facebook_login_path %>
-
+  <%= link_to "Create an Account", sign_up_path %>
 </div>
