--- a/app/views/sign_up/new.html.erb
+++ b/app/views/sign_up/new.html.erb
@@ -1,8 +1,16 @@
 <%= form_for @user, url: sign_up_path do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
   <%= f.label :phone_number %>
   <%= f.text_field :phone %>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
 
   <%= f.submit 'Create Account', class: 'btn' %>
 <% end %>
