--- a/app/views/users/folders/binaries/show.html.erb
+++ b/app/views/users/folders/binaries/show.html.erb
@@ -1,5 +1,6 @@
 <h1>File: <%= @binary.name %></h1>
 <%= link_to 'Download', @binary.data_url, class: 'btn btn-primary' %>
+<%= link_to 'Delete', binary_path(@binary.folder.owner, @binary.url, @binary.name, @binary.extension, id: @binary.id), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
 
 <div class="preview">
 <%= render_preview(@binary) %>
