--- a/app/views/sign_up/new.html.erb
+++ b/app/views/sign_up/new.html.erb
@@ -1,3 +1,14 @@
+<% if @user.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being created:</h2>
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+
 <div class="form-group", style="width:50%;">
 <%= form_for @user, url: sign_up_path do |f| %>
   <div class="form-group">
