Add validation for email and phone format

--- a/app/views/sign_up/new.html.erb
+++ b/app/views/sign_up/new.html.erb
@@ -1,32 +1,23 @@
-<% if @user.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being created:</h2>
-  <ul>
-    <% @user.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= render partial: 'shared/user_creation_errors' %>
 
 <div class="form-group", style="width:50%;">
 <%= form_for @user, url: sign_up_path do |f| %>
   <div class="form-group">
     <%= f.label :username %>
-    <%= f.text_field :username, class: "form-control" %>
+    <%= f.text_field :username, class: "form-control", placeholder:'Your Username' %>
   </div>
   <div class="form-group">
     <%= f.label :phone_number %>
-    <%= f.text_field :phone, class: "form-control" %>
+    <%= f.text_field :phone, class: "form-control", placeholder:'Format: 123-456-7890' %>
   </div>
   <% if @user.fb_id.nil? %>
     <div class="form-group">
       <%= f.label :name %>
-      <%= f.text_field :name, class: "form-control" %>
+      <%= f.text_field :name, class: "form-control", placeholder:'Your Full Name' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
-      <%= f.text_field :email, class: "form-control" %>
+      <%= f.text_field :email, class: "form-control", placeholder:'Your Email' %>
     </div>
     <div class="form-group">
       <%= f.label :password %>
