--- a/app/views/users/folders/new.html.erb
+++ b/app/views/users/folders/new.html.erb
@@ -1,7 +1,5 @@
-
-
 <div class="form-group", style="width:50%;">
-  <%= form_for @folder, url: "/#{current_user.username}/folders" do |f| %>
+  <%= form_for [:users, @folder] do |f| %>
   <%= f.hidden_field :type, value: 'folder' %>
     <div class="form-group">
     <%= f.label :name  %>
