add comment functionality

--- a/app/views/users/binaries/show.html.erb
+++ b/app/views/users/binaries/show.html.erb
@@ -5,4 +5,11 @@
 <%= render_preview(@binary) %>
 </div>
 
-<%= render partial: 'shared/comments' %>
+<%= render partial: 'shared/comments_form' %>
+
+<div class="comments">
+  <% @binary.comments.each do |comment| %>
+    <p><%= comment.user.username %></p>
+    <p><%= comment.text %></p>
+  <% end %>
+</div>
