fix and refactor format validations

--- a/app/views/shared/_user_creation_errors.html.erb
+++ b/app/views/shared/_user_creation_errors.html.erb
@@ -1,5 +1,5 @@
 <% if @user.errors.any? %>
-  <div id="error_explanation" class='alert alert-danger'>
+  <div id="error_explanation" class='alert alert-warning'>
     <ul>
       <% @user.errors.full_messages.each do |message| %>
       <li><%= message %></li>
