add formatting to comment form

--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,5 +1,11 @@
-<%= form_for [@binary, @comment] do |f| %>
-  <%= f.label :text, "Comment" %>
-  <%= f.text_field :text %>
+<div class="form-group", style="width:50%;">
+  <%= form_for [@binary, @comment] do |f| %>
+  <div class="form-group">
+    <%= f.label :text, "Comment" %>
+    <%= f.text_field :text, class: "form-control" %>
+  </div>
+  
   <%= f.submit "Post Comment" %>
-<% end %>
+  <% end %>
+
+</div>
