--- a/app/views/users/folders/binaries/show.html.erb
+++ b/app/views/users/folders/binaries/show.html.erb
@@ -1,6 +1,7 @@
 <h1>File: <%= @binary.name %></h1>
 <%= link_to 'Download', @binary.data_url, class: 'btn btn-primary' %>
 <%= link_to 'Delete', @binary.url, data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
+<%= link_to 'Like File', users_like_file_path(@binary, like: true), method: :post, class: 'btn btn-warning' %>
 
 <div class="preview">
 <%= render_preview(@binary) %>
