--- a/app/views/users/folders/binaries/show.html.erb
+++ b/app/views/users/folders/binaries/show.html.erb
@@ -1,7 +1,8 @@
 <h1>File: <%= @binary.name %></h1>
 <%= link_to 'Download', @binary.data_url, class: 'btn btn-primary' %>
 <%= link_to 'Delete', @binary.url, data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
-<%= link_to 'Like File', users_like_file_path(@binary), method: :post, class: 'btn btn-warning' %>
+<%= link_to users_like_file_path(@binary), method: :post, class: 'btn btn-warning' do %><span class="glyphicon glyphicon-thumbs-up">
+</span> Like File <% end %>
 
 <div class="likes">
   <p>File Likes: <%= @binary.likes.count %> </p>
@@ -15,9 +16,12 @@
 
 <div class="comments">
   <% @binary.comments.each do |comment| %>
-    <%= link_to 'Like Comment', users_like_comment_path(@binary, comment), method: :post, class: 'btn btn-warning' %>
-    <p><%= comment.user.username %></p>
-    <p><%= comment.text %></p>
+    <div class="panel panel-default">
+      <div class="panel-heading"><%= comment.user.username %></div>
+      <div class="panel-body"><%= comment.text %></div>
+    </div>
+    <%= link_to users_like_comment_path(@binary, comment), method: :post, class: 'btn btn-warning'  do %> <span class="glyphicon glyphicon-thumbs-up">
+    </span> Like Comment<% end %>
     <p>Comment Likes: <%= comment.likes.count %></p>
   <% end %>
 </div>
