created edit form to edit password

--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,5 +1,13 @@
-<%= form_for @user do |f| %>
-  New Password: <%= f.text_field :password %><br />
-  Confirm Password : <%= f.text_field :confirm_password %><br />
-  <%= f.submit %>
-<% end %>
+<div class="form-group", style="width:50%;">
+  <%= form_for current_user, url: users_password_patch_path(current_user.username) do |f| %>
+    <div class="form-group">
+      <%= f.label :password %>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
+    </div>
+    <div class="form-group">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+    </div>
+      <%= f.submit "Update Password", class: "btn btn-default" %>
+  <% end %>
+</div>
