fix styling typo

--- a/app/views/confirmations/new.html.erb
+++ b/app/views/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %></h1>
 
-We have sent you a SMS with a code to the number above.</p>
+<p>We have sent you a SMS with a code to the number above.</p>
 
 <p> To complete your phone number verification, please enter the 6-digits activation code.</p>
 
