--- a/app/views/users/folders/show.html.erb
+++ b/app/views/users/folders/show.html.erb
@@ -3,6 +3,7 @@
 
 <%= link_to "New Folder", users_new_folder_path(current_user.username), class: "btn btn-success" %>
 <%= link_to "Upload File", users_new_binary_path(current_user.username, @current_folder.route), class: "btn btn-success"%>
+<%= link_to "Share this Folder", users_folder_new_share_path, class: "btn btn-success"%>
 
   <% unless @current_folder.children.empty? %>
     <div class="folder_contents">
