--- a/app/views/users/folders/show.html.erb
+++ b/app/views/users/folders/show.html.erb
@@ -14,7 +14,7 @@
           <th>Status</th>
           <th></th>
           <% @current_folder.folders.each do |folder|%>
-            <tr>
+            <tr class="folder">
               <td> <%= link_to folder.name, "#{folder.url}"%></td>
               <td>  Folder </td>
               <td> <%=folder.updated_at%></td>
@@ -27,7 +27,7 @@
         </div>
         <div class="binaries">
           <% @current_folder.binaries.each do |binary|%>
-            <tr>
+            <tr class="binary">
               <td> <%=link_to(binary.name, binary.url)%></td>
               <td> <%=binary.extension%></td>
               <td> <%=binary.updated_at%></td>
