--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -9,12 +9,15 @@
       <th>Status</th>
       <th></th>
       <% @folders.each do |folder| %>
-        <tr>
-          <td><%= link_to folder.name, folder.url %></td>
-          <td><%= folder.owner.username %></td>
-          <td> <%=folder.updated_at%></td>
-          <td> <%=folder.permission%></td>
-          <td> <button type="button" class="btn btn-primary"> Share </button>  </td>
-          <td> <%= link_to 'Delete', folder.url, data: {confirm: 'Are you sure? This will delete all the contents inside the folder as well.'}, method: :delete, class: 'btn btn-danger' %></td>
-        </tr>
+      <tr>
+        <td><%= link_to folder.name, folder.url %></td>
+        <td><%= folder.owner.username %></td>
+        <td> <%=folder.updated_at%></td>
+        <td> <%=folder.permission%></td>
+        <td> <button type="button" class="btn btn-primary"> Share </button>  </td>
+        <td> <%= link_to 'Delete', folder.url, data: {confirm: 'Are you sure? This will delete all the contents inside the folder as well.'}, method: :delete, class: 'btn btn-danger' %></td>
+      </tr>
       <% end %>
+    </div>
+  </table>
+</div>
