--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -3,6 +3,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="nav navbar-nav">
         <li><%= link_to "Public Folders", folders_path, class: 'nav-link' %></li>
+        <li><%= link_to "Folders Shared with Me", users_shared_folders_path(current_user.username), class: 'nav-link' %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 
