--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
     <div class="<%=user.username%>">
       <tr>
       <td> <img src=" <%=user.avatar_url%>" class="img-thumbnail" width="30%" alt="User's Profile"></td>
-      <td><%=user.username%></td>
+      <td><%=link_to user.username, users_folder_path(user.username, route: "home") %></td>
       <td><%=user.name%></td>
       <td><%=user.email%></td>
       <td><%=user.phone%></td>
