--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,8 +1,8 @@
 <h2>Public Folders</h2>
-
 <div class="folder_contents">
   <table class="table">
     <div class="folders">
+      <th width="75px"></th>
       <th>Name</th>
       <th>Owner</th>
       <th>Date Changed</th>
@@ -10,6 +10,7 @@
       <th></th>
       <% @folders.each do |folder| %>
       <tr>
+        <td><%= image_tag(folder.owner.avatar_url) %></td>
         <td><%= link_to folder.name, folder.url %></td>
         <td><%= folder.owner.username %></td>
         <td> <%=folder.updated_at%></td>
