--- a/app/views/users/folders/show.html.erb
+++ b/app/views/users/folders/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= image_tag(current_user.avatar_url, class: "img-thumbnail")%> <%= current_user.username %></h1>
+<h1><%= image_tag(current_folder.owner.avatar_url, class: "img-thumbnail")%> <%= current_folder.owner.username %></h1>
 
 <%= link_to "New Folder", users_new_folder_path(current_user.username), class: "btn btn-success" %>
 <%= link_to "Upload File", users_new_binary_path(current_user.username, @current_folder.route), class: "btn btn-success"%>
@@ -20,7 +20,7 @@
               <td>  Folder </td>
               <td> <%=folder.updated_at%></td>
               <td> <%=folder.permission%></td>
-              <td> <button type="button" class="btn btn-primary"> Share </button>  </td>
+              <td></td>
               <td> <%= link_to 'Delete', folder.url, data: {confirm: 'Are you sure? This will delete all the contents inside the folder as well.'}, method: :delete, class: 'btn btn-danger' %></td>
             </tr>
           <% end %>
