--- a/app/views/users/shared_folders/index.html.erb
+++ b/app/views/users/shared_folders/index.html.erb
@@ -1,8 +1,10 @@
-<h1><img class="img-thumbnail" src="https://thumb.ibb.co/htakav/default_profile.jpg" alt="default_profile" width="7%"> <%= current_user.username %></h1>
+<h1><%= image_tag(current_user.avatar_url, class: "img-thumbnail", width: '7%')%> <%= current_user.username %></h1>
+
 
 <div class="folder_contents">
   <table class="table">
     <div class="folders">
+      <th width="75px"></th>
       <th>Name</th>
       <th>Owner</th>
       <th>Date Changed</th>
@@ -10,12 +12,11 @@
       <th></th>
       <% @folders.each do |folder| %>
       <tr>
+        <td><%= image_tag(folder.owner.avatar_url, class: 'img-thumbnail') %></td>
         <td><%= link_to folder.name, folder.url %></td>
         <td><%= folder.owner.username %></td>
         <td> <%=folder.updated_at%></td>
         <td> <%=folder.permission%></td>
-        <td> <button type="button" class="btn btn-primary"> Share </button>  </td>
-        <td> <%= link_to 'Delete', folder.url, data: {confirm: 'Are you sure? This will delete all the contents inside the folder as well.'}, method: :delete, class: 'btn btn-danger' %></td>
       </tr>
       <% end %>
     </div>
